fixing z-index, mobile menu > fullscreen

--- a/css/main.css
+++ b/css/main.css
@@ -358,7 +358,7 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 100%;
-  z-index: 20;
+  z-index: 10;
   background-color: var(--bkg-color-primary);
 }
 
@@ -366,7 +366,8 @@ img {
   .container--main-menu {
     position: absolute;
     top: calc(-1 * 16px);
-    left: 0;
+    left: calc(-0.5 * (100vw - 480px));
+    width: 100vw;
     padding: 48px 40px;
   }
   .container--main-menu:not(.is-open) {
@@ -622,7 +623,7 @@ img {
   position: absolute;
   top: -6px;
   right: 15px;
-  z-index: 20;
+  z-index: 10;
   border-style: none;
   background-color: transparent;
   padding: 0;
@@ -703,8 +704,6 @@ img {
 
 @media screen and (min-width: calc(768px + 1px)) {
   .section--hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
     background-image: -webkit-gradient(linear, left top, right top, color-stop(100%, var(--bkg-color-hero-overlay)), to(var(--bkg-color-hero-overlay))), url("../images/decoration/hero-bg-desktop-1600.jpg");
     background-image: linear-gradient(to right, var(--bkg-color-hero-overlay) 100%, var(--bkg-color-hero-overlay)), url("../images/decoration/hero-bg-desktop-1600.jpg");
   }
@@ -714,6 +713,13 @@ img {
   .section--hero {
     background-image: -webkit-gradient(linear, left top, right top, color-stop(100%, var(--bkg-color-hero-overlay)), to(var(--bkg-color-hero-overlay))), url("../images/decoration/hero-bg-desktop-3200.jpg");
     background-image: linear-gradient(to right, var(--bkg-color-hero-overlay) 100%, var(--bkg-color-hero-overlay)), url("../images/decoration/hero-bg-desktop-3200.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section--hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
 
@@ -1033,7 +1039,7 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 20;
   overflow-y: scroll;
   padding: 93px 15px;
   background-color: var(--bkg-color-backdrop);
