--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -7,7 +7,7 @@
 
   width: 100%;
   height: 100%;
-  z-index: 10;
+  z-index: 20;
   overflow-y: scroll;
   padding: 93px 15px;
 
